Added in better documentation of the data processing, specifically the transformations and the use of DataLoader

--- a/rock_id_model/data_prep.ipynb
+++ b/rock_id_model/data_prep.ipynb
@@ -88,13 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Using PyTorch to preprocess images\n",
-    "from torchvision import transforms\n",
-    "from torchvision import datasets\n",
+    "from torchvision import transforms, datasets\n",
     "from PIL import Image\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
@@ -107,16 +106,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Defining Transformations"
+    "#### Defining Transformations\n",
+    "Below I'm defining the transformations to be applied during training, here's a breakdown of each transformation:\n",
+    "- `.Resize` The model expects a specific size image, so this adjusts the size of each image to match.\n",
+    "- `.RandomHorizontalFlip` & `.RandomRotation` Both of these functions are used to provide more variety to the small dataset, artificially 'increasing' the size.\n",
+    "- `.ToTensor` Converts the image to a PyTorch tensor (a multi-dimensional array), scaling the pixel values to a range between 0 and 1 for easier manipulation.\n",
+    "- `.Normalize` Further scales the pixel values based on the set mean and standard deviation ((val - mean) / standard deviation)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data_processing = transforms.Compose([\n",
+    "processed_training_data = transforms.Compose([\n",
     "    transforms.Resize((IMAGE_SIZE, IMAGE_SIZE)),\n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.RandomRotation(10),\n",
@@ -125,19 +129,31 @@
     "])\n",
     "\n",
     "# Essentially the same, but without the augmentation\n",
-    "test_data_processing = transforms.Compose([\n",
+    "processed_test_data = transforms.Compose([\n",
     "    transforms.Resize((IMAGE_SIZE, IMAGE_SIZE)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
-    "])\n"
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using DataLoader\n",
+    "DataLoader provides efficient management of the datatset, batch sizes, continuous transformations, shuffling and more. \n",
+    "- __Batch Sizes__: Allows the model to process multiple images at once rather than one by one.\n",
+    "- __Continuous Transformations__: Upon each epoch, the transformations we defined above will be reapplied to each image meaning the model will be seeing the same images but with slight variation each time.\n",
+    "- __Shuffling__: Exactly as it sounds, the data is shuffled each time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class CustomDataset(Dataset):\n",
     "    def __init__(self, image_paths, labels, transform=None):\n",
     "        self.image_paths = image_paths\n",
@@ -159,8 +175,9 @@
     "\n",
     "# Creating dataset instances, using the appropriate transformations\n",
     "# that I defined above.\n",
-    "train_dataset = CustomDataset(X_train, y_train, transform=training_data_processing)\n",
-    "test_dataset = CustomDataset(X_test, y_test, transform=test_data_processing)\n",
+    "train_dataset = CustomDataset(X_train, y_train, transform = processed_training_data)\n",
+    "test_dataset = CustomDataset(X_test, y_test, transform = processed_test_data)\n",
+    "\n",
     "\n",
     "# Create DataLoaders\n",
     "train_loader = DataLoader(dataset=train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
