Added cell that will download all necessary dependencies when ran.

--- a/rh_model/rockhound_cnn.ipynb
+++ b/rh_model/rockhound_cnn.ipynb
@@ -22,6 +22,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### **Run to install all dependecies**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install tensorflow\n",
+    "%pip install numpy\n",
+    "%pip install scikit-learn\n",
+    "%pip install seaborn\n",
+    "%pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Step 1: Load Dataset\n",
     "Here I'm looping through the dataset folder, creating a list of image paths and corresponding labels."
    ]
