Fixed the first cell responsible for installing dependencies.

--- a/rh_model/rockhound_cnn.ipynb
+++ b/rh_model/rockhound_cnn.ipynb
@@ -31,11 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install tensorflow\n",
-    "%pip install numpy\n",
-    "%pip install scikit-learn\n",
-    "%pip install seaborn\n",
-    "%pip install matplotlib"
+    "!pip install tensorflow numpy scikit-learn seaborn matplotlib"
    ]
   },
   {
@@ -493,7 +489,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
